--- a/style/css/styles.css
+++ b/style/css/styles.css
@@ -58,27 +58,8 @@ h1 {
   color: white;
 }
 
-.visitanos {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(../../img/Banners/clothes-1839935_1920.jpg) no-repeat;
-  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../img/Banners/clothes-1839935_1920.jpg) no-repeat;
-  background-attachment: fixed;
-  background-size: 100% 100%;
-  width: 100%;
-  height: 55vh;
-}
-
-.visitanos h1 {
-  font-size: 60px;
-  font-weight: 700;
-}
-
-.visitanos p {
-  font-size: 22px;
-  color: black;
-}
-
 .btn1 {
-  height: 40px;
+  height: 30px;
   width: 110px;
   background: transparent;
   border: 2px solid white;
@@ -142,6 +123,63 @@ h1 {
   -moz-box-shadow: -1px -1px 13px 2px rgba(0, 0, 0, 0.75);
   -webkit-transition: 1s;
   transition: 1s;
+}
+
+.visitanos {
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(../../img/Banners/clothes-1839935_1920.jpg) no-repeat;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../img/Banners/clothes-1839935_1920.jpg) no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+  width: 100%;
+  height: 55vh;
+}
+
+.visitanos__titulo {
+  font-size: 60px;
+  font-weight: 700;
+}
+
+.visitanos__subtitulo {
+  font-size: 22px;
+  color: black;
+}
+
+.visitanos__btn {
+  height: 40px;
+  width: 110px;
+  background: transparent;
+  border: 2px solid white;
+  color: white;
+  outline: none;
+  border-radius: 4px;
+}
+
+.visitanos__btn:hover {
+  color: black;
+  background-color: white;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.contacto__subtitulo {
+  font-weight: 900;
+}
+
+.contacto__btn {
+  height: 45px;
+  width: 110px;
+  background-color: red;
+  color: white;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  text-align: center;
+}
+
+.contacto__btn:hover {
+  background-color: black;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
 /*FAQS*/
