--- a/style/scss/_index.scss
+++ b/style/scss/_index.scss
@@ -44,3 +44,53 @@
 		transition: 1s;
 	}
 }
+
+.visitanos {
+	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../img/Banners/clothes-1839935_1920.jpg) no-repeat;
+	background-attachment: fixed;
+	background-size: 100% 100%;
+	width: 100%;
+	height: 55vh;
+	&__titulo {
+		font-size: 60px;
+		font-weight: 700;
+	}
+	&__subtitulo {
+		font-size: 22px;
+		color: black;
+	}
+  &__btn{
+	height: 40px;
+	width: 110px;
+	background: transparent;
+	border: 2px solid white;
+	color: white;
+	outline: none;
+	border-radius: 4px;
+	&:hover {
+		color: black;
+		background-color: white;
+		transition: 1s;
+	}
+}
+}
+
+.contacto{
+	&__subtitulo{
+		font-weight: 900;
+	}
+	&__btn{
+		height: 45px;
+		width: 110px;
+		background-color: red;
+		color: white;
+		border-radius: 5px;
+		outline: none;
+		border: none;
+		text-align: center;
+		&:hover {
+			background-color: $background-negro;
+			transition: 0.5s;
+		}
+	}
+}
