--- a/style/scss/_globales.scss
+++ b/style/scss/_globales.scss
@@ -11,6 +11,10 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+.navbar {
+  z-index: 1000;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+}
 .navbar-brand {
   color: black;
   font-family: "Lobster", cursive;
