--- a/style/scss/_remeras.scss
+++ b/style/scss/_remeras.scss
@@ -9,6 +9,8 @@
   }
 }
 .remeras {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  margin-top: 2rem;
   h2 {
     position: relative;
     &::after {
