se corrigen errores de footer en section productos.html

--- a/style/scss/_abrigos.scss
+++ b/style/scss/_abrigos.scss
@@ -39,7 +39,7 @@
         font-weight: normal;
         margin-bottom: 20px;
         font-size: 2rem;
-        font-family: roboto;
+        font-family: "Montserrat", sans-serif;
       }
       hr {
         height: 2px;
