--- a/style/scss/_globales.scss
+++ b/style/scss/_globales.scss
@@ -33,13 +33,23 @@ li {
     margin-left: 10px;
     color: black;
     font-family: "Montserrat", sans-serif;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     &:hover {
-      color: red;
+      color: black;
     }
   }
 }
-
+.nav-item a::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 1.8px;
+  background-color: red;
+  transition: width 0.3s;
+}
+.nav-item a:hover::after {
+  width: 100%;
+}
 .footer {
   background-color: $background-negro;
   color: white;
