--- a/style/scss/_abrigos.scss
+++ b/style/scss/_abrigos.scss
@@ -22,6 +22,9 @@
       border-radius: 5px;
       transition: all ease 0.5s;
       display: block;
+      -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+      -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
+      box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
     }
     .trasera {
       width: 100%;
