--- a/style/scss/_abrigos.scss
+++ b/style/scss/_abrigos.scss
@@ -34,7 +34,7 @@
       position: absolute;
       top: 0;
       padding: 20px;
-      color: white;
+      color: black;
       transform: perspective(600px) rotateY(180deg);
       backface-visibility: hidden;
       h3 {
