--- a/style/scss/_operaciones.scss
+++ b/style/scss/_operaciones.scss
@@ -17,3 +17,15 @@
   border: none;
   text-align: center;
 }
+
+@keyframes SubeYBaja {
+  0% {
+    transform: translate(0) translateZ(0);
+  }
+  50% {
+    transform: translateY(10px) translateZ(0);
+  }
+  to {
+    transform: translate(0) translateZ(0);
+  }
+}
