--- a/style/scss/_index.scss
+++ b/style/scss/_index.scss
@@ -57,7 +57,7 @@
   }
   &__subtitulo {
     font-size: 22px;
-    color: black;
+    color: rgba(255, 0, 0, 0.986);
   }
   &__btn {
     @include boton-estilo-footer;
