Se agrega Padding a las card del index y MQ a tarjetas abrigos.

--- a/style/scss/_index.scss
+++ b/style/scss/_index.scss
@@ -36,6 +36,7 @@
 }
 .card {
   border: none;
+  padding: 20px;
   &:hover {
     box-shadow: -1px -1px 13px 2px rgba(0, 0, 0, 0.75);
     -webkit-box-shadow: -1px -1px 13px 2px rgba(0, 0, 0, 0.75);
