--- a/style/css/styles.css
+++ b/style/css/styles.css
@@ -175,6 +175,7 @@ li .nav-link:hover {
 
 .card {
   border: none;
+  padding: 20px;
 }
 
 .card:hover {
@@ -442,6 +443,24 @@ li .nav-link:hover {
 .descuentos__contenedor__tarjeta:hover figure img {
   -webkit-filter: blur(2px);
           filter: blur(2px);
+}
+
+@media only screen and (max-width: 768px) {
+  .descuentos__contenedor__tarjeta figure {
+    -webkit-transform: perspective(600px) rotateY(180deg);
+            transform: perspective(600px) rotateY(180deg);
+    -webkit-box-shadow: 0px 10px 10px 2px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 10px 10px 2px rgba(0, 0, 0, 0.25);
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .descuentos__contenedor__tarjeta figure {
+    -webkit-transform: perspective(600px) rotateY(180deg);
+            transform: perspective(600px) rotateY(180deg);
+    -webkit-box-shadow: 0px 10px 10px 2px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 10px 10px 2px rgba(0, 0, 0, 0.25);
+  }
 }
 
 /*FAQS*/
