--- a/style/scss/_abrigos.scss
+++ b/style/scss/_abrigos.scss
@@ -65,3 +65,18 @@
 .descuentos__contenedor__tarjeta:hover figure img {
   filter: blur(2px);
 }
+
+.descuentos__contenedor__tarjeta figure {
+  @media only screen and(max-width: $breakpoint-tablet) {
+    transform: perspective(600px) rotateY(180deg);
+    -webkit-box-shadow: 0px 10px 10px 2px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0px 10px 10px 2px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 10px 10px 2px rgba(0, 0, 0, 0.25);
+  }
+  @media only screen and(max-width: $breakpoint-smartphone) {
+    transform: perspective(600px) rotateY(180deg);
+    -webkit-box-shadow: 0px 10px 10px 2px rgba(0, 0, 0, 0.25);
+    -moz-box-shadow: 0px 10px 10px 2px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 10px 10px 2px rgba(0, 0, 0, 0.25);
+  }
+}
